force-app/main/default/objects/GPT_Response_Mapping__mdt/GPT_Response_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>GPT Response Mapping</label>
    <pluralLabel>GPT Response Mappings</pluralLabel>
</CustomObject>