force-app/main/default/objects/GPT_Response_Mapping__mdt/fields/AI_Model__c.field-meta.xml
<CustomField>
    <fullName>AI_Model__c</fullName>
    <label>AI Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OpenAi 3.5-Turbo16K</fullName>
                <default>true</default>
                <label>OpenAi 3.5-Turbo16K</label>
            </value>
            <value>
                <fullName>OpenAi 4.0 Turbo</fullName>
            </value>
            <value>
                <fullName>Google Vertex-Palm-Bison</fullName>
            </value>
            <value>
                <fullName>AWS-Bedrock-CloudeV2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>