force-app/main/default/objects/GPT_Response_Mapping__mdt/fields/Response_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Response_Mapping__c</fullName>
    <label>Response Mapping</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>