force-app/main/default/objects/GPT_Response_Mapping__mdt/fields/Sample_Response__c.field-meta.xml
<CustomField>
    <fullName>Sample_Response__c</fullName>
    <label>Sample Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>