force-app/main/default/objects/GPT_Response_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>AI_Model__c</columns>
    <columns>Description__c</columns>
    <columns>Sample_Response__c</columns>
    <columns>Response_Mapping__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>